io-takamaka-examples/src/main/java/io/takamaka/tests/errors/consistentfromcontract/Super.java
package io.takamaka.tests.errors.consistentfromcontract;

import io.takamaka.code.lang.Contract;
import io.takamaka.code.lang.FromContract;

public class Super extends Contract {
	public @FromContract(Sub.class) void m() {}
}